# Guitar-Learning-Assistant-RTEP5

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Link to FFTW Website  README.md  alsa_config  build.sh  compile.sh  deploy_angular.sh  init.sh  runtests.sh
.github/workflows/: ci.yml
alsa_testing/: playback_test.cpp  recording_test.cpp
frontend/: angular.json  package-lock.json  package.json
frontend/.angular/cache/18.2.14/primebox/: .tsbuildinfo
frontend/src/: styles.scss
frontend/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/components/desktop/: desktop.component.html  desktop.component.scss  desktop.component.ts
frontend/src/app/components/desktop/desktop-side-nav/: desktop-side-nav.component.html  desktop-side-nav.component.scss  desktop-side-nav.component.spec.ts  desktop-side-nav.component.ts
frontend/src/app/components/desktop/pages/desktop-home/: desktop-home.component.html  desktop-home.component.spec.ts  desktop-home.component.ts
frontend/src/app/components/desktop/pages/desktop-practice/: desktop-practice.component.html  desktop-practice.component.spec.ts  desktop-practice.component.ts
frontend/src/app/components/desktop/pages/desktop-settings/: desktop-settings.component.html  desktop-settings.component.spec.ts  desktop-settings.component.ts
frontend/src/app/components/mobile/: mobile.component.html  mobile.component.ts
frontend/src/app/components/mobile/mobile-bottom-nav/: mobile-bottom-nav.component.html  mobile-bottom-nav.component.scss  mobile-bottom-nav.component.spec.ts  mobile-bottom-nav.component.ts
frontend/src/app/components/mobile/pages/mobile-home/: mobile-home.component.html  mobile-home.component.spec.ts  mobile-home.component.ts
frontend/src/app/components/mobile/pages/mobile-practice/: mobile-practice.component.html  mobile-practice.component.spec.ts  mobile-practice.component.ts
frontend/src/app/components/mobile/pages/mobile-settings/: mobile-settings.component.html  mobile-settings.component.spec.ts  mobile-settings.component.ts
frontend/src/app/components/widgets/accuracy/: accuracy.component.html  accuracy.component.spec.ts  accuracy.component.ts
frontend/src/app/components/widgets/chord-schematic/: chord-schematic.component.html  chord-schematic.component.scss  chord-schematic.component.spec.ts  chord-schematic.component.ts
frontend/src/app/components/widgets/correct-chord/: correct-chord.component.html  correct-chord.component.scss  correct-chord.component.spec.ts  correct-chord.component.ts
frontend/src/app/components/widgets/last-five-chords/: last-five-chords.component.html  last-five-chords.component.scss  last-five-chords.component.spec.ts  last-five-chords.component.ts
frontend/src/app/components/widgets/response-time/: response-time.component.html  response-time.component.spec.ts  response-time.component.ts
frontend/src/app/components/widgets/timeout/: timeout.component.html  timeout.component.scss  timeout.component.ts
frontend/src/app/components/widgets/timer/: timer.component.html  timer.component.scss  timer.component.ts
frontend/src/app/components/widgets/wrong-chord/: wrong-chord.component.html  wrong-chord.component.spec.ts  wrong-chord.component.ts
frontend/src/app/models/: chord-generation-settings.model.ts  chord-status.enum.ts
frontend/src/app/services/: chord-played.service.spec.ts  chord-played.service.ts  chords.service.spec.ts  chords.service.ts  responsive-service.service.spec.ts  responsive-service.service.ts  ws.service.ts
frontend/src/stylesheets/: card.scss  colours.scss  desktop-side-nav.scss  styles.scss
helloworld/: CMakeLists.txt  echotest.cpp  mytest.cpp
python-chord-detection/: analysis.py  peak detection animation.py  process_osc_csv.py  tests.py
python-chord-detection/Oscilloscope Guitar Saves/: G chord csv.csv  scope_4.csv  scope_4_fft.csv  scope_4_waveform.csv  scope_5.csv  scope_8.csv  scope_9.csv
src/: CMakeLists.txt  helloworld.cpp  main.cpp  mult5.cpp  mult5.h  mult5.hpp
src/chord-detection/: .ChordDetection.cpp.swp  CMakeLists.txt  ChordDetection.cpp  ChordDetection.hpp
src/compute/: CMakeLists.txt  DemoOrganiser.cpp  DemoOrganiser.h  DemoOrganiser.hpp  guitarfft.cpp  guitarfft.hpp  mainfft.cpp
src/input/: CMakeLists.txt  DemoDoughProducer.cpp  DemoDoughProducer.h  DemoDoughProducer.hpp  audio_input.cpp  audio_input.hpp  biquad_bandstop.cpp  biquad_bandstop.hpp  main.cpp
src/output/: CMakeLists.txt  DemoBaker.cpp  DemoBaker.h  DemoBaker.hpp
src/websocket/: CMakeLists.txt  websocket.cpp  websocket.hpp
tests/: CMakeLists.txt  test_ChordDetection.cpp  test_fft.cpp  test_mult5.cpp  test_simple.cpp
tests/alsa_testing/: Makefile
websocket/: CMakeLists.txt  mytest.cpp  websocket.cpp  websocket.hpp
websocket/uWebSockets/: Broadcast  BroadcastingEchoServer  Crc32  EchoBody  EchoServer  HelloWorld  HelloWorldThreaded  Http3Server  ParameterRoutes  Precompress  ServerName  UpgradeAsync  UpgradeSync  build
